...
    android:id="@+id/canvasSV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/canvasRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:background="@drawable/login_background">

        <!-- Most important group of views goes in last to avoid being overlapped by other less important views -->
...
                android:gravity="center_horizontal"
                android:textColor="#bfe7f3" />
        </LinearLayout>

        <!-- Middle section -->
        <LinearLayout
            android:id="@+id/credentialsCanvasLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/login_horizontal_margin"
            android:paddingRight="@dimen/login_horizontal_margin">

            <EditText
                android:id="@+id/login_userNameText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="8"
                android:background="@drawable/rounded_corner_edittext"
                android:ems="10"
...
                android:singleLine="true"
                android:textColor="#666666"
                android:textColorHint="#bfbfbf"
                android:typeface="sans" />

            <EditText
                android:id="@+id/login_passwordText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="8"
                android:background="@drawable/rounded_corner_edittext"
...
                android:singleLine="true"
                android:textColor="#666666"
                android:textColorHint="#bfbfbf"
                android:typeface="sans"/>

            <Button
                android:id="@+id/login_loginButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="right|top"
                android:layout_marginTop="25dp"
                android:layout_weight="8"
                android:background="@drawable/login_button"
...
