<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/child_profile_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/child_profilepic"
                    android:layout_width="@dimen/client_profile_pic_dialog_width"
                    android:layout_height="@dimen/client_profile_pic_dialog_height"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/child_boy_infant" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/child_name"
                        style="@style/CustomFontTextViewStyle.ClientList.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="Child Name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/child_name_tv_text_size"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/child_zeir_id"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="EIR"
                            android:textColor="@color/client_list_grey"
                            android:textSize="@dimen/child_details_tv_text_size" />

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/child_age"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="Age"
                            android:textColor="@color/client_list_grey"
                            android:textSize="@dimen/child_details_tv_text_size" />
                    </LinearLayout>

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/pmtct_status"
                        style="@style/CustomFontTextViewStyle.ClientList.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="pmtct_status"
                        android:textColor="@color/client_list_grey"
                        android:textSize="@dimen/child_details_tv_text_size" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/client_list_header_dark_grey" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/record_weight"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="23dp"
                android:text="@string/record_weight"
                android:textColor="@color/text_black"
                android:textSize="@dimen/record_weight_tv_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="20dp">

                <EditText
                    android:id="@+id/edit_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:inputType="number|numberDecimal"
                    android:textSize="@dimen/record_weight_tv_text_size" />

                <TextView
                    android:id="@+id/value_unit_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="kg"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/record_weight_tv_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/weight_taken_today"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/record_weight_today_bg"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="MUAC Taken Today"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textSize="@dimen/record_weight_btn_text_size" />

                <Button
                    android:id="@+id/weight_taken_earlier"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/record_weight_earlier_bg"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="MUAC Taken Earlier"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/client_list_grey"
                    android:textSize="@dimen/record_weight_btn_text_size" />
            </LinearLayout>

            <DatePicker
                android:id="@+id/earlier_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/date_picker_height"
                android:calendarViewShown="false"
                android:descendantFocusability="blocksDescendants"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">


                <Button
                    android:id="@+id/cancel"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/client_list_grey"
                    android:textSize="@dimen/record_weight_btn_text_size" />

                <Button
                    android:id="@+id/set"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/set"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/client_list_grey"
                    android:textSize="@dimen/record_weight_btn_text_size"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>