...
    <string name="scan_qr_code">Scan QR code</string>
    <string name="search_hint">Find name or ID</string>
    <string name="select_language">Select Language</string>
    <string name="no_openmrs_id">No unique ids found. Click on the sync button to get more and if this error persists contact the system admin.</string>
    <string name="alphabetical_sort">Alphabetical (Name)</string>
    <string name="name">Name</string>
    <string name="dismiss">Cancel</string>
    <string name="dose_d">DOSE (D)</string>
    <string name="id">ID</string>
    <string name="service_location">Service Location</string>
    <string name="patient_location">Location: %1$s</string>
    <string name="dose_given_date">Dose %1$s given %2$s</string>
    <string name="label_immunization_records">IMMUNISATION &amp; SERVICES</string>

    <string name="unauthorized">Please check the credentials</string>
    <string name="unauthorized_group">Your user group is not allowed to access this device</string>
    <string name="unknown_response">login failed. Try later</string>
    <string name="no_internet_connectivity">No internet connection. Please ensure data connectivity</string>
    <string name="login_text">Log In</string>
    <string name="show_password_text">Show password</string>
    <string name="complete">Complete</string>
    <string name="updating_dialog_title">Updating…</string>
    <string name="remove_from_register">REMOVE FROM REGISTER</string>
    <string name="url_separator">/</string>
    <string name="clients_key">clients</string>
...
