<android.support.v4.org.smartregister.cbhc.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main contorg.smartregister.cbhc.viewview -->

    <org.smartregister.org.smartregister.cbhc.view.viewpager.OpenSRPViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <include layout="@layout/custom_nav_view_base"/>
</android.support.v4.org.smartregister.cbhc.widget.DrawerLayout>